refactoring some stuff for clarity